welcome.lessons.welcome.conditions.Conditions.scala.error
Program:1: error: not found: value estFacemur
if ( estFacemur() ) {
     ^